<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/feedbackpagecontainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:orientation="vertical"

    tools:context="com.example.caffae.studentsc.Feedback.RatingLecturer.FeedbackPageFragment">
...
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:background="@drawable/buttonbackground"
            android:layout_marginTop="90dp"
            android:text="@string/slides" />
        <Button
            android:id="@+id/lectureButton"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:drawableTop="@drawable/ic_face_black_24dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_gravity="center"
...
