...
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/title_class"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/rating"
        android:title="@string/title_feedback"/>

    <item
        android:id="@+id/navigation_grades"
        android:icon="@android:drawable/ic_input_get"
...
